tests facebook messenger automations

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
+    <script src="./scripts/config-fb.js"></script>
+    <script src="./scripts/sdk-fb.js"></script>
     <title>feature-messenger-fb</title>
 </head>
 <body>
-    
+    <h1 class="title">Feature Messenger Facebook</h1>
+
+    <!-- Messenger Plugin de bate-papo Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Plugin de bate-papo code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
 </body>
 </html>
